--- a/vendas_prime.csproj
+++ b/vendas_prime.csproj
@@ -138,6 +138,12 @@
     <Compile Include="produto\CadastraProduto.Designer.cs">
       <DependentUpon>CadastraProduto.cs</DependentUpon>
     </Compile>
+    <Compile Include="produto\ListarProdutos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="produto\ListarProdutos.Designer.cs">
+      <DependentUpon>ListarProdutos.cs</DependentUpon>
+    </Compile>
     <Compile Include="produto\Produto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -158,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="produto\CadastraProduto.resx">
       <DependentUpon>CadastraProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="produto\ListarProdutos.resx">
+      <DependentUpon>ListarProdutos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
